--- a/jjtproject/.gitignore
+++ b/jjtproject/.gitignore
@@ -1,4 +1,23 @@
-"db.sqlite3" 
-"__pycache__/" 
-"db.sqlite3" 
-"__pycache__/" 
+# Python cache
+__pycache__/
+*.py[cod]
+
+# SQLite database
+db.sqlite3
+
+# Environment
+.env
+venv/
+env/
+
+# Django static & media
+staticfiles/
+media/
+
+# IDE settings
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
