--- a/jjtproject/.gitignore
+++ b/jjtproject/.gitignore
@@ -1,23 +1,30 @@
-# Python cache
+
+Set-Content -Path .gitignore -Encoding UTF8 -Value @"
+# Python / Django
 __pycache__/
 *.py[cod]
-
-# SQLite database
+*.egg-info/
 db.sqlite3
-
-# Environment
-.env
-venv/
-env/
-
-# Django static & media
+/media/
 staticfiles/
-media/
+static_collected/
 
-# IDE settings
+# Virtual env & secrets
+env/
+venv/
+.env
+*.env
+
+# OS / IDE
+.DS_Store
+Thumbs.db
 .vscode/
 .idea/
 
-# OS files
-.DS_Store
-Thumbs.db
+# Migrations pyc caches
+**/migrations/__pycache__/
+
+# stray local files
+/100
+/50
+"@
